{
    "name": "game_controls",
    "maps": [
        {
            "name": "InGame",
            "id": "532ff3d3-a72d-41e5-b131-b9e04b6e6325",
            "actions": [
                {
                    "name": "RotateCamera",
                    "type": "Button",
                    "id": "558b293c-dafe-4015-9108-7cebb67d81b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "519677e7-e9ae-45d3-9936-2549cf2cdac1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54d2b2ec-02b6-400d-bd6a-acd06b1eae94",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "InvertVector2",
                    "groups": "gamepad",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00ddc215-e4be-4053-b549-395e8573ece2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "NormalizeVector2,InvertVector2",
                    "groups": "keyboard_mouse",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dabd125-5aca-4950-8a41-a16540fab5f8",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "wasd",
                    "id": "f3fe4df2-d476-46a3-967c-f40da15c1663",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "daf3a0bb-28fe-4016-be7f-afef25b93b44",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard_mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ffa21ff4-4bf9-4ffe-80a4-c2028467ca51",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard_mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "942f01d7-f66a-4474-ba64-d7b10ad2e244",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard_mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "15df95e0-d1a5-4ac5-ba9d-4f1c84b902db",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "keyboard_mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "gamepad",
            "bindingGroup": "gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "keyboard_mouse",
            "bindingGroup": "keyboard_mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}